--- a/WebApplication/Views/MenuViews/Dishes/Edit.cshtml
+++ b/WebApplication/Views/MenuViews/Dishes/Edit.cshtml
@@ -26,7 +26,7 @@
                     <span asp-validation-for="DietaryRestrictionId" class="text-danger"></span>
                 </div>
                 <div class="form-group ml-4">
-                    <input type="submit" value="Create" class="btn btn-primary" />
+                    <input type="submit" value="Update" class="btn btn-primary" />
                 </div>
             </form>
         </div>
