--- a/WebApplication/Views/Accounts/Login.cshtml
+++ b/WebApplication/Views/Accounts/Login.cshtml
@@ -20,3 +20,8 @@
         </div>
     </form>
 </div>
+
+
+@section Scripts{
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
