--- a/WebApplication/Views/Accounts/Register.cshtml
+++ b/WebApplication/Views/Accounts/Register.cshtml
@@ -2,7 +2,7 @@
 @model RegisterViewModel;
 
 <div class="row">
-    <form asp-action="Create" class="pl-4">
+    <form asp-action="Register" class="pl-4">
         <div asp-validation-summary="ModelOnly" class="text-danger"></div>
 
         <div class="form-group">
@@ -46,7 +46,20 @@
             <span asp-validation-for="VatNumber" class="text-danger"></span>
         </div>
         <div class="form-group">
+            <label asp-for="Role" class="control-label"></label>
+            <select asp-for="Role" class="form-control">
+                <option value="Client">Client</option>
+                <option value="Staff">Staff member</option>
+            </select>
+            <span asp-validation-for="Role" class="text-danger"></span>
+        </div>
+        <div class="form-group">
             <input type="submit" value="Create" class="btn btn-primary" />
         </div>
     </form>
 </div>
+
+
+@section Scripts{
+    @{ await Html.RenderPartialAsync("_ValidationScriptsPartial");}
+}
