--- a/WebApplication/wwwroot/css/site.css
+++ b/WebApplication/wwwroot/css/site.css
@@ -115,11 +115,42 @@ body {
     background: #4c8245;
 }
 
-i {
-    font-size: 0.8em;
-}
-
 .bg-greenish-green
 {
     background-color:#a9cca5;
+}
+
+.square-button-responsive {
+    width: 100%;
+    overflow: hidden;
+}
+
+    .square-button-responsive > a {
+        position: absolute;
+        padding: 0;
+        width: 100%;
+        height: 100%;
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: center;
+        text-align: center;
+        text-decoration: none;
+        color: inherit;
+        background-color: inherit;
+    }
+
+        .square-button-responsive > a > p 
+        {
+            font-size:1.2em;
+        }
+
+        .square-button-responsive > a > svg {
+            font-size:2em;
+        }
+
+.square-button-responsive:after {
+    content: "";
+    display: block;
+    padding-bottom: 100%;
 }
