--- a/WebApplication/Views/Shared/_Layout.cshtml
+++ b/WebApplication/Views/Shared/_Layout.cshtml
@@ -42,7 +42,7 @@
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-controller="Accounts" asp-action="Logout">
+                                <a class="nav-link text-light" asp-controller="Account" asp-action="Logout">
                                     <i class="fas fa-sign-out-alt"></i>
                                     Logout
                                 </a>
@@ -51,13 +51,13 @@
                         else
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-controller="Accounts" asp-action="Register">
+                                <a class="nav-link text-light" asp-controller="Account" asp-action="Register">
                                     <i class="fas fa-user-plus"></i>
                                     Register
                                 </a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link text-light" asp-controller="Accounts" asp-action="Login">
+                                <a class="nav-link text-light" asp-controller="Account" asp-action="Login">
                                     <i class="fas fa-sign-in-alt"></i>
                                     Login
                                 </a>
